--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 
     <title>Weather info</title>
 </head>
@@ -109,9 +109,9 @@
         crossorigin="anonymous"></script>
 
 
-    <script src=js/Weather.js></script>
-    <script src=js/ui.js></script>
-    <script src=js/app.js></script>
+    <script src=/js/Weather.js></script>
+    <script src=/js/ui.js></script>
+    <script src=/js/app.js></script>
 </body>
 
 </html>
